Configure backend settings for Render, make CORS dynamic, remove SMTP/S3, and add gitignore (clean)